--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@prisma/client": "^6.8.2",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
