--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npx nodemon ./src/index.ts",
     "build": "npx tsc",
-    "start": "npx nodemon ./dist/index.js"
+    "main": "npx nodemon ./dist/index.js"
   },
   "keywords": [],
   "author": "",
