--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "outDir": "dist",
     "strict": true,
     "lib": ["esnext"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "target": "ES2020",
+    "module": "CommonJS"
   }
 }
