--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "multer": "^2.0.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.19",
     "nodemon": "^3.1.10",
     "prisma": "^6.8.2",
